[package]
name = "repl_test"
version = "0.0.0"
authors = ["Sean Lawlor <slawlor@slawlor.com>"]
description = "Test utility for Repl crate"
license = "MIT"
edition = "2018"
keywords = ["repl"]
repository = "https://github.com/slawlor/repl"
readme = "../README.md"
publish = false

# [features]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "3", features = ["derive"] }
colored = "2"
dirs = "4"
log = { version = "0.4.8", features = ["kv_unstable"] }
multi_log = "0.1"
once_cell = "1"
rustyline = "10"
thread-id = "3"
tokio = { version = "1.10", features = ["full"] }

repl = { path = "../repl" }
