[package]
name = "repl-test"
default_run = "repl_test"
version = "0.0.0"
authors = ["Sean Lawlor <slawlor@slawlor.com>"]
description = "Test utility for Repl crate"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
clap = { version = "3", features = ["derive"] }
colored = "2"
dirs = "4"
log = { version = "0.4.8", features = ["kv_unstable"] }
multi_log = "0.1"
once_cell = "1"
rustyline = "10"
thread-id = "3"
tokio = { version = "1.10", features = ["full"] }

rustyrepl = { path = "../rustyrepl", features = ["async"] }
