[package]
name = "rustyrepl"
version = "0.1.3"
authors = ["Sean Lawlor <slawlor@slawlor.com>"]
description = "A Rust read, evaluate, print, loop (REPL) utility "
license = "MIT"
edition = "2018"
keywords = ["repl"]
repository = "https://github.com/slawlor/repl"
readme = "../README.md"

[features]
async = ["async-trait"]
default = []

[dependencies]
# Required dependencies
anyhow = { version = "1" }
clap = { version = "3", features = ["derive"] }
dirs = "4"
log = { version = "0.4", features = ["kv_unstable"] }
rustyline = "7"
thiserror = "1"

# Optional dependencies
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
