[package]
name = "rustyrepl"
version = "0.1.4"
authors = ["Sean Lawlor <slawlor@slawlor.com>"]
description = "A Rust read, evaluate, print, loop (REPL) utility "
license = "MIT"
edition = "2018"
keywords = ["repl"]
repository = "https://github.com/slawlor/repl"
readme = "../README.md"

[features]
async = ["async-trait"]
default = []

[dependencies]
# Required dependencies
anyhow = { version = "1" }
clap = { version = "3", features = ["derive"] }
dirs = "2"
log = { version = "0.4", features = ["kv_unstable"] }
rustyline = "7"
thiserror = "1"

# Optional dependencies
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
colored = "2"
ctor = "0.1"
once_cell = "1"
tempfile = "3"
thread-id = "3"
tokio = { version = "1", features = ["full"] }
